--- a/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
+++ b/1 Preprocess/Merge Data/1.1.0 Iterative Merger.ipynb
@@ -24,7 +24,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_24816\\3666630488.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_16468\\3666630488.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -432,7 +432,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_24816\\736028239.py:77: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_16468\\736028239.py:77: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
             "  results = pd.concat([results, iteration_results_df], ignore_index=True)\n"
           ]
         },
@@ -1495,6 +1495,54 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "KeyError",
+          "evalue": "'Date'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "File \u001b[1;32mc:\\Users\\austinsh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3801\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3802\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3803\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+            "File \u001b[1;32mindex.pyx:153\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32mindex.pyx:182\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+            "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+            "\u001b[1;31mKeyError\u001b[0m: 'Date'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[17], line 14\u001b[0m\n\u001b[0;32m     11\u001b[0m rolled_df_FB554_shifted \u001b[38;5;241m=\u001b[39m apply_time_shift_by_hours(rolled_df_FB554, \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Merge the rolled and shifted DataFrames accordingly\u001b[39;00m\n\u001b[1;32m---> 14\u001b[0m combined_df \u001b[38;5;241m=\u001b[39m \u001b[43mjoin_df_FB554_to_df_CDunit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrolled_df_CDunit\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrolled_df_FB554_shifted\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     15\u001b[0m combined_df_all \u001b[38;5;241m=\u001b[39m join_df_AlCon_to_combined_df(combined_df, rolled_df_AlCon_shifted)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# Now, combined_df_all is the DataFrame you're interested in\u001b[39;00m\n",
+            "Cell \u001b[1;32mIn[13], line 4\u001b[0m, in \u001b[0;36mjoin_df_FB554_to_df_CDunit\u001b[1;34m(df_CDunit, df_FB554)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mjoin_df_FB554_to_df_CDunit\u001b[39m(df_CDunit, df_FB554):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m# Ensure 'Date' columns are datetime objects and sort DataFrames\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     df_CDunit[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(df_CDunit[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m], errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m     df_FB554[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mto_datetime(\u001b[43mdf_FB554\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDate\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, errors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcoerce\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m     df_CDunit \u001b[38;5;241m=\u001b[39m df_CDunit\u001b[38;5;241m.\u001b[39mdropna(subset\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m     df_FB554 \u001b[38;5;241m=\u001b[39m df_FB554\u001b[38;5;241m.\u001b[39mdropna(subset\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m])\u001b[38;5;241m.\u001b[39msort_values(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+            "File \u001b[1;32mc:\\Users\\austinsh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\frame.py:4090\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4088\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4089\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4090\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4091\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4092\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+            "File \u001b[1;32mc:\\Users\\austinsh\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3809\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3805\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3806\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3807\u001b[0m     ):\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3809\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3810\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3811\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3812\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+            "\u001b[1;31mKeyError\u001b[0m: 'Date'"
+          ]
+        }
+      ],
+      "source": [
+        "# Make sure to have your DataFrames: df_CDunit, df_FB554, df_AlCon ready\n",
+        "\n",
+        "# Apply the specific rolling average directly\n",
+        "rolled_df_CDunit = apply_rolling_average_to_df(df_CDunit, 8)\n",
+        "rolled_df_FB554 = apply_rolling_average_to_df(df_FB554, 4)\n",
+        "rolled_df_AlCon = apply_rolling_average_to_df(df_AlCon, 2)\n",
+        "\n",
+        "# Apply the specific time shifts directly\n",
+        "# Note: Since you're applying a negative shift to AlCon and a positive shift to FB554, ensure this logic is correctly handled in your apply_time_shift_by_hours function\n",
+        "rolled_df_AlCon_shifted = apply_time_shift_by_hours(rolled_df_AlCon, -1) # apply_negative_shift_hours already applied in specifying -1\n",
+        "rolled_df_FB554_shifted = apply_time_shift_by_hours(rolled_df_FB554, 1)\n",
+        "\n",
+        "# Merge the rolled and shifted DataFrames accordingly\n",
+        "combined_df = join_df_FB554_to_df_CDunit(rolled_df_CDunit, rolled_df_FB554_shifted)\n",
+        "combined_df_all = join_df_AlCon_to_combined_df(combined_df, rolled_df_AlCon_shifted)\n",
+        "\n",
+        "# Now, combined_df_all is the DataFrame you're interested in\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
@@ -1502,8 +1550,17 @@
         "# Save DataFrame to CSV file in the same directory as the Jupyter Notebook\n",
         "# model_results.to_csv('model_results.csv', index=False)\n",
         "\n",
-        "model_results.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Merge Data\\iterative_adjR2_scan.csv', index=False)\n"
+        "model_results.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Merge Data\\iterative_adjR2_scan.csv', index=False)\n",
+        "\n",
+        "combined_df_all.to_csv(r'C:\\Users\\austinsh\\Project-OptiC4\\1 Preprocess\\Merge Data\\dataset_for_EDA.csv', index=False)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
